<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/menu_view_background"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/name_text" />
        <TextView
            android:id="@+id/ship_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="X-Wing"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/model_text" />
        <TextView
            android:id="@+id/ship_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="GR-75 medium transport"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/manufacture_text" />
        <TextView
            android:id="@+id/ship_mfr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="Gallofree Yards, Inc."
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/length_text" />
        <TextView
            android:id="@+id/ship_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="90"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/speed_text" />
        <TextView
            android:id="@+id/ship_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="650"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="1"
            android:text="@string/passengers_text" />
        <TextView
            android:id="@+id/ship_passenger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="90"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding"
        android:weightSum="3"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/favourite_checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/nochecked"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                app:tint="#FF018786"
                />
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/AppTheme.SmallTextStyle"
            android:layout_weight="2"
            android:text="Is your favourite?"
            />
    </LinearLayout>
    <Button
        style="@style/AppTheme.ButtonTextStyle"
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/close_btn_text"
        />
</LinearLayout>